syntax = "proto3";

import "Proto/Log.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "YouRata.Common.Proto";

package conflict_monitor_message;

service LogService
{
    rpc WriteLogMessage (MilestoneLog) returns (google.protobuf.Empty);
    rpc GetLogMessages (google.protobuf.Empty) returns (LogMessages);
}

